clean up and fixed nav alignment

--- a/disco-fighter/css/media-mb.css
+++ b/disco-fighter/css/media-mb.css
@@ -5,7 +5,9 @@
         margin:auto 50px;
     }
     .navbar .flex{
+        width:100%;
         flex-direction: column;
+        justify-content: space-between;
     }
 
     .navbar ul{
@@ -45,9 +47,12 @@
         align-items: center;
     }
 
+    .videos{
+        width:100%;
+    }
+
     .videos .grid-3{
         grid-template-columns: repeat(1, 1fr);
-        gap:20px;
     }
 
 }
