--- a/disco-fighter/css/media-tab.css
+++ b/disco-fighter/css/media-tab.css
@@ -1,10 +1,12 @@
-@media (min-width:620px) and (max-width:930px){
+@media(min-width:621px) and (max-width:930px){
 
     .navbar{
         height: 140px;
     }
     .navbar .flex{
+        width: 100%;
         flex-direction: column;
+        justify-content: space-between;
 
     }
     .navbar ul{
@@ -53,8 +55,9 @@
 
 
 } 
-
-@media(max-width:1250){
+/* 
+@media(min-width:930){
+    
     .cd .grid-3{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -63,6 +66,6 @@
     }
 
    
-}
+} */
 
    
